--- a/project-nelin/src/app/app.component.html
+++ b/project-nelin/src/app/app.component.html
@@ -2,13 +2,10 @@
 <div>
 
   <mat-toolbar color="primary">
-    <span>wwww.negroslindos.com</span>
+    <span>Este é uma toolbar</span>
   </mat-toolbar>
 
-
-  <!-- Resources -->
-  <h2>Bem Vindo a o www.negroslindos.com</h2>
-  <p>Meu nome é Paulo e eu sou o www.negroslindos.com</p>
+  <h1>O Home ficará aqui , ou outrra coisa que eu quiser</h1>
 
 </div>
 
