--- a/project-nelin/src/app/app.component.html
+++ b/project-nelin/src/app/app.component.html
@@ -1,13 +1,8 @@
 
-<div>
-
-  <mat-toolbar color="primary">
-    <span>Este é uma toolbar</span>
+<div class="container">
+  <mat-toolbar color="primary" class="toobar">
+    <span></span>
   </mat-toolbar>
-
-  <h1>O Home ficará aqui , ou outrra coisa que eu quiser</h1>
-
 </div>
-
 
 <router-outlet></router-outlet>
