--- a/project-nelin/src/app/components/parallax/parallax.component.html
+++ b/project-nelin/src/app/components/parallax/parallax.component.html
@@ -1,8 +1,7 @@
 
 <div class="background">
     <div class="container">
-        <span class="text-center">
-          Ei João sua imagem está nesse site agora
-        </span>
+        <h1 class="text-center">Negros Lindos</h1>
+        <p> Este Site tem a função de aprensta-lo a novas iniciativas</p>
     </div>
 </div>
