--- a/project-nelin/src/app/components/parallax/parallax.component.css
+++ b/project-nelin/src/app/components/parallax/parallax.component.css
@@ -1,25 +1,37 @@
 
   /*Imagem Parallax*/
 .background{
-    background-image: url('../../../assets/carinspace.jpeg');
-    min-height: 100%;
-    justify-content:center;
-    align-items: center;
-    display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
+  background-image: url('../../../assets/carinspace.jpeg');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 .container{
   text-align: center;
+  width: 50%;
+  padding: 15px;
+  display: grid;
+  grid-template-rows: min-content auto min-content;
+
+  border-radius: 10%;
+
+  background-color:rgb(238, 130, 238,0.5);
+}
+
+.container:hover{
+  background-color:rgb(238, 130, 238,1.0);
 }
 
   .text-center{
-    background-color: rgb(58, 58, 58);
-    color: rgb(189, 245, 247);
+    color: rgb(67, 2, 80);
     font-size: x-large;
     display: flex;
+    justify-content: center;
   }
